# ip-law

./: .gitignore  README.md  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  test.py
api/: main.py
backend/: __init__.py
backend/api/: __init__.py  app.py  deps.py  schemas.py
backend/chunking/: __init__.py  legal_chunker.py  legal_chunker_v2.py  verdict_chunker.py  verdict_extractors.py
backend/db/: auth.py  (+4 more)
benchmarks/: README.md  __init__.py  build_internal_legal_benchmark.py  dataset.py  evaluator.py  ingest_zalo_legal_pipeline.py  metrics.py  pipeline_adapter.py  results.py  run_eval.py
chunking/: legal_chunker.py  legal_chunker_v2.py  verdict_chunker.py  verdict_chunks.json  verdict_sections.py
core/: rag_pipeline.py  smart_router.py  trademark_pipeline.py  verdict_rag_pipeline.py
db/: __init__.py  auth.py  database.py  models.py  schemas.py
frontend/: App.tsx  ChatApp.tsx  index.css  index.html  metadata.json  package-lock.json  package.json  tailwind.config.js  types.ts  vite.config.ts
scripts/: run_all_pipelines.py  run_legal_pipeline.py  run_trademark_pipeline.py  run_verdict_pipeline.py  run_vn_trademark_pipeline.py  test_csv_download.py
tests/: test_imports.py  test_routes_service_integration.py  test_routing_strategies.py  test_services_layer.py
utils/: __init__.py  generate_rag_eval_dataset_qwen.py  neo4j_ingest.py  neo4j_retriever.py  pdf_to_txt.py  trademark_crawler.py  trademark_crawler_v2.py  trademark_neo4j_ingest.py  trademark_pg_ingest.py  verdict_neo4j_ingest.py  verdict_neo4j_retriever.py  xlsx_merger.py
(+69 files in other folders)
